Movie microservice created